# Renderer

./: .clang-format  CMakeLists.txt  Dependecy.cmake  vcpkg.json
shader/: simple.frag
src/: buffer.cpp  buffer.h  commonInclude.h  context.cpp  context.h  main.cpp  program.cpp  program.h  shader.cpp  shader.h  vertexLayout.cpp  vertexLayout.h
src/Helper/: HelperLibrary.cpp  HelperLibrary.h
